--- a/.github/workflows/dotnet-ci.yaml
+++ b/.github/workflows/dotnet-ci.yaml
@@ -2,7 +2,8 @@ name: .NET CI
 
 env:
   DOTNET_VERSION: '6.0.401'
-  PATH_TO_DOTNET_PROJECT: 'net/Chamber.API/Chamber.API.csproj'
+  PATH_TO_API_PROJECT: 'net/Chamber.API/Chamber.API.csproj'
+  PATH_TO_SLN_FILE: 'net'
 
 on:
   push:
@@ -22,8 +23,8 @@ jobs:
         with:
           dotnet-version: ${{env.DOTNET_VERSION}}
       - name: Restore dependencies
-        run: dotnet restore
-      - name: Build app
+        run: dotnet restore 
+      - name: Build app ${{env.PATH_TO_SLN_FILE}}
         run: dotnet build -c Release --no-restore --project ${{env.PATH_TO_DOTNET_PROJECT}}
       - name: Run automated tests
         run: dotnet test -c Release --no-build --project ${{env.PATH_TO_DOTNET_PROJECT}}
