--- a/.github/workflows/dotnet-ci.yaml
+++ b/.github/workflows/dotnet-ci.yaml
@@ -23,8 +23,8 @@ jobs:
         with:
           dotnet-version: ${{env.DOTNET_VERSION}}
       - name: Restore dependencies
-        run: dotnet restore 
-      - name: Build app ${{env.PATH_TO_SLN_FILE}}
+        run: dotnet restore ${{env.PATH_TO_SLN_FILE}}
+      - name: Build app
         run: dotnet build -c Release --no-restore --project ${{env.PATH_TO_DOTNET_PROJECT}}
       - name: Run automated tests
         run: dotnet test -c Release --no-build --project ${{env.PATH_TO_DOTNET_PROJECT}}
