--- a/.github/workflows/dotnet-ci.yaml
+++ b/.github/workflows/dotnet-ci.yaml
@@ -25,6 +25,6 @@ jobs:
       - name: Restore dependencies
         run: dotnet restore ${{env.PATH_TO_SLN_FILE}}
       - name: Build app
-        run: dotnet build -c Release --no-restore --project ${{env.PATH_TO_SLN_FILE}}
+        run: dotnet build -c Release --no-restore ${{env.PATH_TO_SLN_FILE}}
       - name: Run automated tests
-        run: dotnet test -c Release --no-build --project ${{env.PATH_TO_SLN_FILE}}
+        run: dotnet test -c Release --no-build ${{env.PATH_TO_SLN_FILE}}
