--- a/.github/workflows/angular-ci.yaml
+++ b/.github/workflows/angular-ci.yaml
@@ -21,6 +21,6 @@ jobs:
         with:
           node-version: ${{env.NODE_VERSION}}
       - name: Install dependencies
-        run: npm install
+        run: cd angular && npm install
       - name: Build app
-        run: cd angular && npm run build
+        run: npm run build
