--- a/.github/workflows/angular-ci.yaml
+++ b/.github/workflows/angular-ci.yaml
@@ -23,4 +23,4 @@ jobs:
       - name: Install dependencies
         run: cd angular && npm install
       - name: Build app
-        run: npm run build
+        run: cd angular && npm run build
