--- a/.github/workflows/flyway-ci.yaml
+++ b/.github/workflows/flyway-ci.yaml
@@ -4,18 +4,19 @@ env:
   POSTGRES_DB: device-hub
   POSTGRES_USER: application
   POSTGRES_PASSWORD: password
-  PATHS: database
+  DATABASE_PATH: database
+  THIS_PATH: '.github'
 
 on:
   push:
     branches:
       - main
     paths:
-      - ${{env.PATHS}}
-
+      - ${{env.DATABASE_PATH}}
   pull_request:
     paths:
-      - ${{env.PATHS}}
+      - ${{env.DATABASE_PATH}}
+      - ${{env.THIS_PATH}}
 
 jobs:
   migrate:
