--- a/.github/workflows/flyway-ci.yaml
+++ b/.github/workflows/flyway-ci.yaml
@@ -1,23 +1,23 @@
 name: Flyway CI
 
-env:
-  POSTGRES_DB: device-hub
-  POSTGRES_USER: application
-  POSTGRES_PASSWORD: password
-  DATABASE_PATH: database
-  THIS_PATH: .github
+# env:
+#   POSTGRES_DB: device-hub
+#   POSTGRES_USER: application
+#   POSTGRES_PASSWORD: password
+#   DATABASE_PATH: database
+#   THIS_PATH: .github
 
 on:
   push:
     branches:
       - main
-    paths:
-      - ${{env.DATABASE_PATH}}
-      - ${{env.THIS_PATH}}
+    # paths:
+    #   - ${{env.DATABASE_PATH}}
+    #   - ${{env.THIS_PATH}}
   pull_request:
-    paths:
-      - ${{env.DATABASE_PATH}}
-      - ${{env.THIS_PATH}}
+    # paths:
+    #   - ${{env.DATABASE_PATH}}
+    #   - ${{env.THIS_PATH}}
 
 jobs:
   build:
