--- a/.github/workflows/flyway-ci.yaml
+++ b/.github/workflows/flyway-ci.yaml
@@ -26,6 +26,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Update packages
+        uses: sudo apt update
       - name: Install docker
         run: sudo apt install docker
       - name: Create docker image
