--- a/.github/workflows/flyway-ci.yaml
+++ b/.github/workflows/flyway-ci.yaml
@@ -29,7 +29,7 @@ jobs:
       - name: Update packages
         run: sudo apt update
       - name: Install docker
-        run: sudo apt install docker
+        run: sudo apt install docker -y
       - name: Create docker image
         run: docker build database -t flyway -f docker/flyway/Dockerfile
       - name: Run flyway
