--- a/.github/workflows/flyway-ci.yaml
+++ b/.github/workflows/flyway-ci.yaml
@@ -26,10 +26,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Update packages
-        run: sudo apt update
       - name: Install docker
-        run: sudo apt install docker -y
+        run: |
+          sudo apt update
+          sudo apt install docker -y
       - name: Create docker image
         run: docker build database -t flyway -f docker/flyway/Dockerfile
       - name: Run flyway
